force-app/main/default/objects/cpm__Setup_Record__c/cpm__Setup_Record__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Setup Record</label>
</CustomObject>