force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__Apex_Base_Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Apex_Base_Class__c</fullName>
    <description>The name of the Base class of the package.</description>
    <label>Apex Base Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>