force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__Apex_Installation_Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Apex_Installation_Class__c</fullName>
    <description>Handler Apex class implementing the interface ISetupBase</description>
    <label>Apex Installation Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>