force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__Category__c.field-meta.xml
<CustomField>
    <fullName>cpm__Category__c</fullName>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>