force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__Color_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Color_Number__c</fullName>
    <label>Color Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>