force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__IsActive__c.field-meta.xml
<CustomField>
    <fullName>cpm__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value indicating if the Extension is active or not.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>