force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>cpm__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Package the default one.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>