force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__Namespace__c.field-meta.xml
<CustomField>
    <fullName>cpm__Namespace__c</fullName>
    <description>The namespace of the extension package. Heavily used to dynamically construct the package&apos;s classes.</description>
    <label>Namespace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>