force-app/main/default/objects/cpm__Setup_Record__c/fields/cpm__Pretty_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Pretty_Name__c</fullName>
    <description>The public name of the Extension Package.</description>
    <label>Pretty Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>